--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import "~@blueprintjs/core/lib/css/blueprint.css";
-@import "~@blueprintjs/datetime/lib/css/blueprint-datetime.css";
+@import '~@blueprintjs/core/lib/css/blueprint.css';
+@import '~@blueprintjs/datetime/lib/css/blueprint-datetime.css';
 
 .App {
   text-align: center;
